--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
+/*REGLAGES GENERAUX*/
+
+
+
 *{
     box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
 }
 
 html, body{
-    margin: 0;
+
     width: 100%;
+    background-color: rgb(213, 211, 208);
+
 }
 
 #container{
@@ -12,18 +20,72 @@ html, body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
 
 .card{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
+    border: none;
     width: 80%; 
+    min-height: 400px;
+    max-width: 500px;;
     margin-top: 30px;
-    border-radius: 10px;
-    padding: 10px;
+    border-radius: 15px;
+    padding: 5px;
+    /* background-color: cornflowerblue; */
+    background: linear-gradient(-45deg, #ee7752, #e26a6aaa, #2385d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
 }
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+.picture-profil{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+
+.profil{
+    
+    width: max-content;
+    padding: 0px;
+    border-radius: 50%;
+    opacity: 0.85;
+    margin: 18px;
+}
+
+.text-profil{
+    display: flex;
+    flex-direction: column;
+}
+
+.localisation-profil{
+    display:flex;
+    justify-content: center;
+
+}
+.local{
+    display: flex;
+    width: 50px;
+}
+
+.linkedin, .gitlab, .github{
+    width: 50px;
+}
+
 .column{
     display: flex;
     flex-direction: column;
@@ -31,13 +93,16 @@ html, body{
 
 .hover{
     display:none;
+    animation: 5s ease-in-out;
 }
 .card:hover .title{
     display: none;
+    
 }
 .card:hover .hover{
     display: flex;
     flex-direction: column;
+    cursor: pointer;
 }
 .enseignement{
     display: flex;
@@ -57,4 +122,9 @@ footer{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: grey;
+    margin-top: 30px;
+    height: 150px;
+    line-height: 30px;
+
 }
