--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 /*REGLAGES GENERAUX*/
-
+/* @import url("https://fonts.cdnfonts.com/css/quicksand");
+:root {
+    --blue: #0065fc;
+    --blueLight: #deebff;
+    --grey: #f2f2f2; */
+  /* } */
 
 
 *{
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    font-family: "quicksand", Tahoma, sans-serif;
 }
 
 html, body{
@@ -30,12 +36,11 @@ html, body{
     border: none;
     width: 80%; 
     min-height: 400px;
-    max-width: 500px;;
+    max-width: 500px;
     margin-top: 30px;
     border-radius: 15px;
-    padding: 5px;
     /* background-color: cornflowerblue; */
-    background: linear-gradient(-45deg, #ee7752, #e26a6aaa, #2385d5, #23d5ab);
+    background: linear-gradient(-45deg, #ee7752, #a1880daa, #2385d5, #23d5ab);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 }
@@ -51,16 +56,28 @@ html, body{
 		background-position: 0% 50%;
 	}
 }
+
+.title{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+.title h2{
+    text-align: center;
+}
 .picture-profil{
     width: 100%;
     display: flex;
     justify-content: center;
+    opacity: 0.6;
 }
 
 
 .profil{
-    
+    border: 4px double white;
     width: max-content;
+    height: 150px;
     padding: 0px;
     border-radius: 50%;
     opacity: 0.85;
@@ -86,14 +103,13 @@ html, body{
     width: 50px;
 }
 
-.column{
-    display: flex;
-    flex-direction: column;
-}
 
 .hover{
     display:none;
-    animation: 5s ease-in-out;
+    min-height: 400px;
+    width: 100%;
+    font-size: medium;
+    line-height: 20px;
 }
 .card:hover .title{
     display: none;
@@ -102,8 +118,72 @@ html, body{
 .card:hover .hover{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
+    border-radius: 15px;
+    background-color: rgb(198, 180, 100);
+    animation: rotate 3sec;
 }
+
+.card ul{
+    list-style: none;
+    margin: 15px;
+}
+.card ul li{
+    line-height: 20px;
+    border: 1px solid #deebff;
+    margin: 4px;
+    border-radius: 5px;
+    padding: 2px;
+    width: 200px;
+    text-align: center;
+}
+.card ul li:hover{
+    opacity: 0.7;
+}
+.card ul h2{
+    text-align: center;
+}
+
+.skills, .projects, .expe, .drums{
+    width: 200px;
+}
+.skills-row{
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+}
+
+.expe-column{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: 14px;
+    padding: 20px;
+}
+
+.Loqualis{
+    display: flex;
+    justify-content: space-between;
+}
+.Logo-loqualis{
+    width: 70px;
+}
+.drums-list ul li{
+    width: 300px;
+    margin: 20px;
+    padding: 10px;
+    text-align: center;
+}
+
+.ens-list ul li{
+    width: 300px;
+    margin: 20px;
+    padding: 10px;
+    text-align: center;
+}
+
 .enseignement{
     display: flex;
     justify-content: center;
@@ -116,6 +196,7 @@ html, body{
 .enseignement img{
     height: 100px;
 }
+
 
 footer{
     display: flex;
