--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
-    font-family: "quicksand", Tahoma, sans-serif;
+    font-family: "lato", Tahoma, sans-serif;
 }
 
 html, body{
@@ -108,8 +108,9 @@ html, body{
 
 .linkedin, .gitlab, .github{
     width: 40px;
-    margin: 30px;
+    margin: 10px;
 }
+
 
 
 .hover{
@@ -118,6 +119,11 @@ html, body{
     width: 100%;
     font-size: medium;
     line-height: 20px;
+}
+
+.mail{
+    display: flex;
+    justify-content: center;
 }
 
 .git-logo{
@@ -138,7 +144,7 @@ html, body{
     cursor: pointer;
     border-radius: 15px;
     background-color: rgb(198, 180, 100);
-    padding: 10px;
+    padding: 30px;
     line-height: 25px;
     
 }
@@ -190,14 +196,14 @@ html, body{
     width: 400px;
 
 }
-.visuel-booki, .visuel-myfood{
+.visuel-booki, .visuel-myfood, .visuel-panthere, .visuel-kanap, .visuel-piquante, .visuel-groupomania, .visuel-yesno, .visuel-spectre, .visuel-rollerderby {
     display: none;
+    
 }
 
 .hover-proj h2{
     text-align: center;
     padding: 10px;
-
 }
 
 .card-Booki:hover .visuel-booki{
@@ -236,6 +242,16 @@ html, body{
     margin: auto;
 }
 .card-kanap:hover h2{
+    display: none;
+}
+
+.rollerderbyrules:hover .visuel-rollerderby{
+    display: flex;
+    width: 50%;
+    border-radius: 20px;
+    margin: auto;
+}
+.rollerderbyrules:hover h2{
     display: none;
 }
 
